# CMake_Excercise

lecture_1/case1/: CMakeLists.txt
lecture_2/case1/: CMakeLists.txt  main.cpp
lecture_2/case2_Library/src/SomeLibDemo/cpp/: .adder.h.swo  .adder.h.swp  .gitignore  CMakeLists.txt  adder.cpp  adder.h  main_notused.cpp
lecture_2/case2_Library/src/TestSome/cpp/: CMakeLists.txt  main.cpp
